--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio App</title>
   </head>
   <body>
