--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio App</title>
   </head>
   <body>
